# udacity_robotics_code

project_1/model/four_wheel/: model.sdf
project_1/script/: welcome_message.cpp
project_1/world/: world1.world
project_2/ball_chaser/launch/: ball_chaser.launch
project_2/catkin_ws/src/ball_chaser/: CMakeLists.txt
project_2/catkin_ws/src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro.bak
project_2/catkin_ws/src/my_robot/worlds/: brian.world
project_2/my_robot/launch/: world.launch
project_2_exercise/ball_chaser/src/: drive_bot.cpp  process_image.cpp
project_2_exercise/catkin_ws/src/ball_chaser/: CMakeLists.txt  CMakeLists.txt.bak
project_2_exercise/catkin_ws/src/ball_chaser/src/: drive_bot.cpp
project_2_exercise/my_robot/launch/: world.launch
project_2_exercise/my_robot/urdf/: my_robot.xacro
project_2_exercise/my_robot/world/: brian.world
project_2_exercise/simple_arm/: CMakeLists.txt
project_2_exercise/simple_arm/launch/: robot_spawn.launch
project_2_exercise/simple_arm/src/: arm_mover.cpp  simple_mover.cpp
project_3/src/kalman_1d/: CMakeLists.txt  kalman_example  main.cpp
project_3/src/kalman_matrix/: main.cpp
project_3_localization_algo/src/: main.cpp
project_3_where_am_i/catkin_ws/src/my_robot/: robot_sim.rviz
project_4/fast_slam_catkin_ws/src/: MyRviz.rviz
project_4/occupancy_grid_mapping/: main.cpp
project_5/RoboND-A-Visualization/: main.cpp
project_5/a_star_real_world/: main.cpp
project_5/a_start_algo/: main.cpp
project_5/bfs_algo/: main.cpp
project_5/minkowski_sum/: main.cpp
(+15 files in other folders)
